# AVA

./: .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  ava.c  ava.h  ava.pc.in  ava_config  libava.pc.in  libava_config  main.c
