AM_CPPFLAGS = -D__STDC_INT64__

lib_LTLIBRARIES =
bin_PROGRAM     =

lib_LTLIBRARIES += libava.la
include_HEADERS = ava.h
libava_la_CPPFLAGS = $(NOVA_CFLAGS) $(EZPARSE_CFLAGS) $(RESTART_CFLAGS)
libava_la_LIBADD   = $(NOVA_LIBS)   $(EZPARSE_LIBS)   $(RESTART_LIBS)

bin_PROGRAMS += ava
ava_CPPFLAGS =       $(NOVA_CFLAGS) $(EZPARSE_CFLAGS) $(RESTART_CFLAGS)
ava_LDADD    = -lava $(NOVA_LIBS)   $(EZPARSE_LIBS)   $(RESTART_LIBS)
EXTRA_ava_DEPENDENCIES = libava.la

